# mach

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  cmake_install.cmake  conanfile.txt  mach.cbp  readme.md  readme.txt
cmake/modules/: FindASSIMP.cmake
include/glad/: glad.h
lib/: glad.c
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
res/models/: FrostSword_MKI_LowPoly.fbx
res/shaders/base/: base.frag  base.vert
res/shaders/base2/: base2.frag
res/shaders/flat/: flat.frag  flat.vert
res/shaders/phong/: phong.frag  phong.vert
src/: MachApplication.cpp  MachApplication.hpp
src/auxiliary/: Constants.hpp  Exceptions.hpp  LogHelper.cpp  LogHelper.hpp  MachAssertion.hpp  Memory.hpp  Properties.hpp  VectorUtils.hpp
src/auxiliary/exceptions/: AssertionFailure.hpp  NotImplemented.hpp
src/auxiliary/iterators/: VectorRawIterator.hpp  VectorRawReverseIterator.hpp
src/auxiliary/logging/: LogUtils.hpp  Logger.cpp  Logger.hpp
src/auxiliary/parsing/: ParserUtils.hpp
src/auxiliary/time/: TimeUtils.hpp  Timer.cpp  Timer.hpp
src/behaviour/camera/: FirstPersonCameraBehaviour.cpp  FirstPersonCameraBehaviour.hpp  LookAtCameraBehaviour.cpp  LookAtCameraBehaviour.hpp
src/caching/: AssetCache.hpp
src/core/Scene/: Camera.hpp  SceneHierarchy.hpp  SceneNode.hpp
src/core/Scene/Behaviour/: SceneBehaviour.hpp
src/core/scene/: Camera.hpp  NodeBehaviour.hpp  SceneHierarchy.hpp  SceneNode.hpp
src/core/scene/behaviour/: FirstPersonCameraBehaviour.cpp  FirstPersonCameraBehaviour.hpp  NodeBehaviour.hpp
src/graphics/geometry/: Mesh.hpp  OpenGLModelBuffer.hpp
src/graphics/model/: Mesh.hpp  Model.hpp  Vertex.hpp  WaveformObj.hpp
src/graphics/renderer/: Camera.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  Renderer.cpp  Renderer.hpp  Transform.hpp
src/graphics/renderer/debug/: OpenGLDebug.hpp
src/graphics/renderer/material/: Texture.hpp
src/graphics/renderer/model/: Mesh.hpp  Model.hpp  Vertex.hpp
src/graphics/renderer/shaders/: OpenGLShader.hpp
src/graphics/renderer/texture/: OpenGLTexture.hpp
src/graphics/renderer/window/: OpenGLWindow.cpp  OpenGLWindow.hpp  RenderWindow.cpp  RenderWindow.hpp
src/graphics/shaders/: GraphicsShader.cpp  GraphicsShader.hpp  OpenGLShader.cpp  OpenGLShader.hpp
src/graphics/texture/: OpenGLTexture.hpp
src/graphics/window/: OpenGLWindow.cpp  OpenGLWindow.hpp  RenderWindow.cpp  RenderWindow.hpp
src/io/: FileIO.hpp  KeyInput.cpp  KeyInput.hpp  MouseInput.cpp  MouseInput.hpp
src/io/files/: FileIO.hpp
src/io/input/: KeyInput.cpp  KeyInput.hpp  MouseInput.cpp  MouseInput.hpp
src/math/linalg/: LinAlgTypes.hpp  LinMatTypes.hpp  Matrix.hpp  Matrix2.hpp  Matrix3.hpp  Matrix4.hpp  Quaternion.hpp  Rotations.hpp  TransformCompound.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
src/math/linalg/Matrices/: Matrix.hpp
src/math/linalg/Matrix/: Matrix.hpp  MatrixUtils.hpp  RotationMatrix.hpp  ScaleMatrix.hpp  TransformMatrix.hpp
src/math/linalg/Vector/: Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  VectorTraits.hpp
src/math/linalg/Vectors/: Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  VectorTraits.hpp
src/math/util/: MathUtils.hpp  NumberTraits.hpp
src/tests/: TestRunner.hpp
src/tests/math/: LinearAlgebraTests.hpp
tests/: CoreEngineTests.hpp  LinearAlgebraTests.hpp  TestRunner.hpp
tests/math/: LinearAlgebraTests.hpp
